[package]
name = "fromsoftware-title-skip"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
broadsword = { git = "https://github.com/vswarte/broadsword.git" }
detour = { git = "https://github.com/veeenu/detour-rs.git", branch = "master" }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
